--- a/cn.zh-cn/用户指南/云硬盘的监控指标.md
+++ b/cn.zh-cn/用户指南/云硬盘的监控指标.md
@@ -3,100 +3,146 @@
 **表 1**  云硬盘支持的监控指标
 
 <a name="table119871055813"></a>
-<table><thead align="left"><tr id="zh-cn_topic_0095137102_row7299845174418"><th class="cellrowborder" valign="top" width="28.35820895522388%" id="mcps1.2.4.1.1"><p id="zh-cn_topic_0095137102_p7299164517441"><a name="zh-cn_topic_0095137102_p7299164517441"></a><a name="zh-cn_topic_0095137102_p7299164517441"></a>指标名称</p>
+<table><thead align="left"><tr id="zh-cn_topic_0095137102_row7299845174418"><th class="cellrowborder" valign="top" width="16.32%" id="mcps1.2.5.1.1"><p id="zh-cn_topic_0095137102_p7299164517441"><a name="zh-cn_topic_0095137102_p7299164517441"></a><a name="zh-cn_topic_0095137102_p7299164517441"></a>指标名称</p>
 </th>
-<th class="cellrowborder" valign="top" width="49.25373134328358%" id="mcps1.2.4.1.2"><p id="zh-cn_topic_0095137102_p20300194510442"><a name="zh-cn_topic_0095137102_p20300194510442"></a><a name="zh-cn_topic_0095137102_p20300194510442"></a>指标含义</p>
+<th class="cellrowborder" valign="top" width="37.2%" id="mcps1.2.5.1.2"><p id="zh-cn_topic_0095137102_p20300194510442"><a name="zh-cn_topic_0095137102_p20300194510442"></a><a name="zh-cn_topic_0095137102_p20300194510442"></a>指标含义</p>
 </th>
-<th class="cellrowborder" valign="top" width="22.388059701492537%" id="mcps1.2.4.1.3"><p id="zh-cn_topic_0095137102_p1730013458445"><a name="zh-cn_topic_0095137102_p1730013458445"></a><a name="zh-cn_topic_0095137102_p1730013458445"></a>测量对象</p>
+<th class="cellrowborder" valign="top" width="13.489999999999998%" id="mcps1.2.5.1.3"><p id="zh-cn_topic_0095137102_p1730013458445"><a name="zh-cn_topic_0095137102_p1730013458445"></a><a name="zh-cn_topic_0095137102_p1730013458445"></a>测量对象</p>
+</th>
+<th class="cellrowborder" valign="top" width="32.99%" id="mcps1.2.5.1.4"><p id="zh-cn_topic_0095137102_p1489034132517"><a name="zh-cn_topic_0095137102_p1489034132517"></a><a name="zh-cn_topic_0095137102_p1489034132517"></a>监控周期（原始指标）</p>
 </th>
 </tr>
 </thead>
-<tbody><tr id="zh-cn_topic_0095137102_row58713584313"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p639293919437"><a name="zh-cn_topic_0095137102_p639293919437"></a><a name="zh-cn_topic_0095137102_p639293919437"></a>磁盘读带宽</p>
+<tbody><tr id="zh-cn_topic_0095137102_row130211454448"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p430284514414"><a name="zh-cn_topic_0095137102_p430284514414"></a><a name="zh-cn_topic_0095137102_p430284514414"></a>磁盘读速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p63947395438"><a name="zh-cn_topic_0095137102_p63947395438"></a><a name="zh-cn_topic_0095137102_p63947395438"></a>该指标用于统计每秒从测量对象读出数据量。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p3515183844613"><a name="zh-cn_topic_0095137102_p3515183844613"></a><a name="zh-cn_topic_0095137102_p3515183844613"></a>该指标用于统计每秒从测量对象读出数据量。</p>
+<p id="zh-cn_topic_0095137102_p3303745174410"><a name="zh-cn_topic_0095137102_p3303745174410"></a><a name="zh-cn_topic_0095137102_p3303745174410"></a>单位：Byte/s。</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p133031245114411"><a name="zh-cn_topic_0095137102_p133031245114411"></a><a name="zh-cn_topic_0095137102_p133031245114411"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p1560465462516"><a name="zh-cn_topic_0095137102_p1560465462516"></a><a name="zh-cn_topic_0095137102_p1560465462516"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_text9384132716509"><a name="zh-cn_topic_0095137102_text9384132716509"></a><a name="zh-cn_topic_0095137102_text9384132716509"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_ul760455415251"></a><a name="zh-cn_topic_0095137102_ul760455415251"></a><ul id="zh-cn_topic_0095137102_ul760455415251"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
+</td>
+</tr>
+<tr id="zh-cn_topic_0095137102_row58713584313"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p639293919437"><a name="zh-cn_topic_0095137102_p639293919437"></a><a name="zh-cn_topic_0095137102_p639293919437"></a>磁盘读带宽</p>
+</td>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p63947395438"><a name="zh-cn_topic_0095137102_p63947395438"></a><a name="zh-cn_topic_0095137102_p63947395438"></a>该指标用于统计每秒从测量对象读出数据量。</p>
 <p id="zh-cn_topic_0095137102_p19395103912436"><a name="zh-cn_topic_0095137102_p19395103912436"></a><a name="zh-cn_topic_0095137102_p19395103912436"></a>单位：Byte/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p75621043204313"><a name="zh-cn_topic_0095137102_p75621043204313"></a><a name="zh-cn_topic_0095137102_p75621043204313"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p75621043204313"><a name="zh-cn_topic_0095137102_p75621043204313"></a><a name="zh-cn_topic_0095137102_p75621043204313"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p1453715378277"><a name="zh-cn_topic_0095137102_p1453715378277"></a><a name="zh-cn_topic_0095137102_p1453715378277"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row79016514437"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1039719396437"><a name="zh-cn_topic_0095137102_p1039719396437"></a><a name="zh-cn_topic_0095137102_p1039719396437"></a>磁盘写带宽</p>
+<tr id="zh-cn_topic_0095137102_row79016514437"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p1039719396437"><a name="zh-cn_topic_0095137102_p1039719396437"></a><a name="zh-cn_topic_0095137102_p1039719396437"></a>磁盘写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p1439873904318"><a name="zh-cn_topic_0095137102_p1439873904318"></a><a name="zh-cn_topic_0095137102_p1439873904318"></a>该指标用于统计每秒写到测量对象的数据量。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p1439873904318"><a name="zh-cn_topic_0095137102_p1439873904318"></a><a name="zh-cn_topic_0095137102_p1439873904318"></a>该指标用于统计每秒写到测量对象的数据量。</p>
 <p id="zh-cn_topic_0095137102_p1040033904311"><a name="zh-cn_topic_0095137102_p1040033904311"></a><a name="zh-cn_topic_0095137102_p1040033904311"></a>单位：Byte/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p1856324311438"><a name="zh-cn_topic_0095137102_p1856324311438"></a><a name="zh-cn_topic_0095137102_p1856324311438"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p1856324311438"><a name="zh-cn_topic_0095137102_p1856324311438"></a><a name="zh-cn_topic_0095137102_p1856324311438"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p21136395275"><a name="zh-cn_topic_0095137102_p21136395275"></a><a name="zh-cn_topic_0095137102_p21136395275"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_1"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_1"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_1"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_1"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_1"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_1"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row29018554320"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p16405193904316"><a name="zh-cn_topic_0095137102_p16405193904316"></a><a name="zh-cn_topic_0095137102_p16405193904316"></a>磁盘读IOPS</p>
+<tr id="zh-cn_topic_0095137102_row29018554320"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p16405193904316"><a name="zh-cn_topic_0095137102_p16405193904316"></a><a name="zh-cn_topic_0095137102_p16405193904316"></a>磁盘读IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p1440793924312"><a name="zh-cn_topic_0095137102_p1440793924312"></a><a name="zh-cn_topic_0095137102_p1440793924312"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p1440793924312"><a name="zh-cn_topic_0095137102_p1440793924312"></a><a name="zh-cn_topic_0095137102_p1440793924312"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
 <p id="zh-cn_topic_0095137102_p2040873910435"><a name="zh-cn_topic_0095137102_p2040873910435"></a><a name="zh-cn_topic_0095137102_p2040873910435"></a>单位：请求/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p12567114314431"><a name="zh-cn_topic_0095137102_p12567114314431"></a><a name="zh-cn_topic_0095137102_p12567114314431"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p12567114314431"><a name="zh-cn_topic_0095137102_p12567114314431"></a><a name="zh-cn_topic_0095137102_p12567114314431"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p1418934092714"><a name="zh-cn_topic_0095137102_p1418934092714"></a><a name="zh-cn_topic_0095137102_p1418934092714"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_2"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_2"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_2"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_2"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_2"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_2"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row17904512439"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1941163924310"><a name="zh-cn_topic_0095137102_p1941163924310"></a><a name="zh-cn_topic_0095137102_p1941163924310"></a>磁盘写IOPS</p>
+<tr id="zh-cn_topic_0095137102_row17904512439"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p1941163924310"><a name="zh-cn_topic_0095137102_p1941163924310"></a><a name="zh-cn_topic_0095137102_p1941163924310"></a>磁盘写IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p24133398432"><a name="zh-cn_topic_0095137102_p24133398432"></a><a name="zh-cn_topic_0095137102_p24133398432"></a>该指标用于统计每秒到测量对象写入数据的请求次数。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p24133398432"><a name="zh-cn_topic_0095137102_p24133398432"></a><a name="zh-cn_topic_0095137102_p24133398432"></a>该指标用于统计每秒到测量对象写入数据的请求次数。</p>
 <p id="zh-cn_topic_0095137102_p114151739164315"><a name="zh-cn_topic_0095137102_p114151739164315"></a><a name="zh-cn_topic_0095137102_p114151739164315"></a>单位：请求/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p5569243174314"><a name="zh-cn_topic_0095137102_p5569243174314"></a><a name="zh-cn_topic_0095137102_p5569243174314"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p5569243174314"><a name="zh-cn_topic_0095137102_p5569243174314"></a><a name="zh-cn_topic_0095137102_p5569243174314"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p1743594214276"><a name="zh-cn_topic_0095137102_p1743594214276"></a><a name="zh-cn_topic_0095137102_p1743594214276"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_3"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_3"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_3"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_3"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_3"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_3"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row44137152423"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p49626508493"><a name="zh-cn_topic_0095137102_p49626508493"></a><a name="zh-cn_topic_0095137102_p49626508493"></a>平均队列长度</p>
+<tr id="zh-cn_topic_0095137102_row44137152423"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p49626508493"><a name="zh-cn_topic_0095137102_p49626508493"></a><a name="zh-cn_topic_0095137102_p49626508493"></a>平均队列长度</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p5273172205418"><a name="zh-cn_topic_0095137102_p5273172205418"></a><a name="zh-cn_topic_0095137102_p5273172205418"></a>该指标用于统计测量对象在测量周期内平均等待完成的读取或写入操作请求的数量。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p5273172205418"><a name="zh-cn_topic_0095137102_p5273172205418"></a><a name="zh-cn_topic_0095137102_p5273172205418"></a>该指标用于统计测量对象在测量周期内平均等待完成的读取或写入操作请求的数量。</p>
 <p id="zh-cn_topic_0095137102_p727412195419"><a name="zh-cn_topic_0095137102_p727412195419"></a><a name="zh-cn_topic_0095137102_p727412195419"></a>单位：个。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p15142211497"><a name="zh-cn_topic_0095137102_p15142211497"></a><a name="zh-cn_topic_0095137102_p15142211497"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p15142211497"><a name="zh-cn_topic_0095137102_p15142211497"></a><a name="zh-cn_topic_0095137102_p15142211497"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p3516114352711"><a name="zh-cn_topic_0095137102_p3516114352711"></a><a name="zh-cn_topic_0095137102_p3516114352711"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_4"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_4"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_4"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_4"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_4"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_4"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row15413171544216"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p818164316490"><a name="zh-cn_topic_0095137102_p818164316490"></a><a name="zh-cn_topic_0095137102_p818164316490"></a>磁盘读写使用率</p>
+<tr id="zh-cn_topic_0095137102_row15413171544216"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p818164316490"><a name="zh-cn_topic_0095137102_p818164316490"></a><a name="zh-cn_topic_0095137102_p818164316490"></a>磁盘读写使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p133779141297"><a name="zh-cn_topic_0095137102_p133779141297"></a><a name="zh-cn_topic_0095137102_p133779141297"></a>该指标用于统计测量对象在测量周期内提交读取或写入操作的占比。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p133779141297"><a name="zh-cn_topic_0095137102_p133779141297"></a><a name="zh-cn_topic_0095137102_p133779141297"></a>该指标用于统计测量对象在测量周期内提交读取或写入操作的占比。</p>
 <p id="zh-cn_topic_0095137102_p337816141292"><a name="zh-cn_topic_0095137102_p337816141292"></a><a name="zh-cn_topic_0095137102_p337816141292"></a>单位：百分比。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p9161924498"><a name="zh-cn_topic_0095137102_p9161924498"></a><a name="zh-cn_topic_0095137102_p9161924498"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p9161924498"><a name="zh-cn_topic_0095137102_p9161924498"></a><a name="zh-cn_topic_0095137102_p9161924498"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p115574519272"><a name="zh-cn_topic_0095137102_p115574519272"></a><a name="zh-cn_topic_0095137102_p115574519272"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_5"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_5"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_5"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_5"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_5"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_5"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row1241316159422"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p499845814498"><a name="zh-cn_topic_0095137102_p499845814498"></a><a name="zh-cn_topic_0095137102_p499845814498"></a>平均写操作大小</p>
+<tr id="zh-cn_topic_0095137102_row1241316159422"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p499845814498"><a name="zh-cn_topic_0095137102_p499845814498"></a><a name="zh-cn_topic_0095137102_p499845814498"></a>平均写操作大小</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p8409538280"><a name="zh-cn_topic_0095137102_p8409538280"></a><a name="zh-cn_topic_0095137102_p8409538280"></a>该指标用于统计测量对象在测量周期内平均每个写IO操作传输的字节数。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p8409538280"><a name="zh-cn_topic_0095137102_p8409538280"></a><a name="zh-cn_topic_0095137102_p8409538280"></a>该指标用于统计测量对象在测量周期内平均每个写IO操作传输的字节数。</p>
 <p id="zh-cn_topic_0095137102_p0409143812812"><a name="zh-cn_topic_0095137102_p0409143812812"></a><a name="zh-cn_topic_0095137102_p0409143812812"></a>单位：KByte/操作。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p1319328498"><a name="zh-cn_topic_0095137102_p1319328498"></a><a name="zh-cn_topic_0095137102_p1319328498"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p1319328498"><a name="zh-cn_topic_0095137102_p1319328498"></a><a name="zh-cn_topic_0095137102_p1319328498"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p139711452271"><a name="zh-cn_topic_0095137102_p139711452271"></a><a name="zh-cn_topic_0095137102_p139711452271"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_6"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_6"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_6"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_6"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_6"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_6"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row1036637154212"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p5246356174915"><a name="zh-cn_topic_0095137102_p5246356174915"></a><a name="zh-cn_topic_0095137102_p5246356174915"></a>平均读操作大小</p>
+<tr id="zh-cn_topic_0095137102_row1036637154212"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p5246356174915"><a name="zh-cn_topic_0095137102_p5246356174915"></a><a name="zh-cn_topic_0095137102_p5246356174915"></a>平均读操作大小</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p113383203718"><a name="zh-cn_topic_0095137102_p113383203718"></a><a name="zh-cn_topic_0095137102_p113383203718"></a>该指标用于统计测量对象在测量周期内平均每个读IO操作传输的字节数。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p113383203718"><a name="zh-cn_topic_0095137102_p113383203718"></a><a name="zh-cn_topic_0095137102_p113383203718"></a>该指标用于统计测量对象在测量周期内平均每个读IO操作传输的字节数。</p>
 <p id="zh-cn_topic_0095137102_p12339152019715"><a name="zh-cn_topic_0095137102_p12339152019715"></a><a name="zh-cn_topic_0095137102_p12339152019715"></a>单位：KByte/操作。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p142119217495"><a name="zh-cn_topic_0095137102_p142119217495"></a><a name="zh-cn_topic_0095137102_p142119217495"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p142119217495"><a name="zh-cn_topic_0095137102_p142119217495"></a><a name="zh-cn_topic_0095137102_p142119217495"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p930319478272"><a name="zh-cn_topic_0095137102_p930319478272"></a><a name="zh-cn_topic_0095137102_p930319478272"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_7"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_7"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_7"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_7"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_7"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_7"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row143683764211"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p335911116315"><a name="zh-cn_topic_0095137102_p335911116315"></a><a name="zh-cn_topic_0095137102_p335911116315"></a>平均写操作耗时</p>
+<tr id="zh-cn_topic_0095137102_row143683764211"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p335911116315"><a name="zh-cn_topic_0095137102_p335911116315"></a><a name="zh-cn_topic_0095137102_p335911116315"></a>平均写操作耗时</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p4562113818612"><a name="zh-cn_topic_0095137102_p4562113818612"></a><a name="zh-cn_topic_0095137102_p4562113818612"></a>该指标用于统计测量对象在测量周期内平均每个写IO的操作时长。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p4562113818612"><a name="zh-cn_topic_0095137102_p4562113818612"></a><a name="zh-cn_topic_0095137102_p4562113818612"></a>该指标用于统计测量对象在测量周期内平均每个写IO的操作时长。</p>
 <p id="zh-cn_topic_0095137102_p35620388615"><a name="zh-cn_topic_0095137102_p35620388615"></a><a name="zh-cn_topic_0095137102_p35620388615"></a>单位：ms/操作。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p1692316716493"><a name="zh-cn_topic_0095137102_p1692316716493"></a><a name="zh-cn_topic_0095137102_p1692316716493"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p1692316716493"><a name="zh-cn_topic_0095137102_p1692316716493"></a><a name="zh-cn_topic_0095137102_p1692316716493"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p10699164892718"><a name="zh-cn_topic_0095137102_p10699164892718"></a><a name="zh-cn_topic_0095137102_p10699164892718"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_8"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_8"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_8"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_8"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_8"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_8"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row836813764217"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p728104125011"><a name="zh-cn_topic_0095137102_p728104125011"></a><a name="zh-cn_topic_0095137102_p728104125011"></a>平均读操作耗时</p>
+<tr id="zh-cn_topic_0095137102_row836813764217"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p728104125011"><a name="zh-cn_topic_0095137102_p728104125011"></a><a name="zh-cn_topic_0095137102_p728104125011"></a>平均读操作耗时</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p179002168612"><a name="zh-cn_topic_0095137102_p179002168612"></a><a name="zh-cn_topic_0095137102_p179002168612"></a>该指标用于统计测量对象测量在周期内平均每个读IO的操作时长。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p179002168612"><a name="zh-cn_topic_0095137102_p179002168612"></a><a name="zh-cn_topic_0095137102_p179002168612"></a>该指标用于统计测量对象测量在周期内平均每个读IO的操作时长。</p>
 <p id="zh-cn_topic_0095137102_p179016161861"><a name="zh-cn_topic_0095137102_p179016161861"></a><a name="zh-cn_topic_0095137102_p179016161861"></a>单位：ms/操作。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p4925672492"><a name="zh-cn_topic_0095137102_p4925672492"></a><a name="zh-cn_topic_0095137102_p4925672492"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p4925672492"><a name="zh-cn_topic_0095137102_p4925672492"></a><a name="zh-cn_topic_0095137102_p4925672492"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p137381503276"><a name="zh-cn_topic_0095137102_p137381503276"></a><a name="zh-cn_topic_0095137102_p137381503276"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_9"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_9"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_9"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_9"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_9"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_9"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row1836837124210"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1994204813492"><a name="zh-cn_topic_0095137102_p1994204813492"></a><a name="zh-cn_topic_0095137102_p1994204813492"></a>平均IO服务时长</p>
+<tr id="zh-cn_topic_0095137102_row1836837124210"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p1994204813492"><a name="zh-cn_topic_0095137102_p1994204813492"></a><a name="zh-cn_topic_0095137102_p1994204813492"></a>平均IO服务时长</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p13139107726"><a name="zh-cn_topic_0095137102_p13139107726"></a><a name="zh-cn_topic_0095137102_p13139107726"></a>该指标用于统计测量对象在测量周期内平均每个读IO或写IO的服务时长。</p>
+<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p13139107726"><a name="zh-cn_topic_0095137102_p13139107726"></a><a name="zh-cn_topic_0095137102_p13139107726"></a>该指标用于统计测量对象在测量周期内平均每个读IO或写IO的服务时长。</p>
 <p id="zh-cn_topic_0095137102_p1914015715219"><a name="zh-cn_topic_0095137102_p1914015715219"></a><a name="zh-cn_topic_0095137102_p1914015715219"></a>单位：ms/操作。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p199271575492"><a name="zh-cn_topic_0095137102_p199271575492"></a><a name="zh-cn_topic_0095137102_p199271575492"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p199271575492"><a name="zh-cn_topic_0095137102_p199271575492"></a><a name="zh-cn_topic_0095137102_p199271575492"></a>云硬盘</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p156891851192719"><a name="zh-cn_topic_0095137102_p156891851192719"></a><a name="zh-cn_topic_0095137102_p156891851192719"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_10"><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_10"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_text9384132716509_10"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_10"></a><a name="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_10"></a><ul id="zh-cn_topic_0095137102_zh-cn_topic_0095137102_ul760455415251_10"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
+</div>
 </td>
 </tr>
 </tbody>
