--- a/cn.zh-cn/用户指南/自定义监控.md
+++ b/cn.zh-cn/用户指南/自定义监控.md
@@ -11,7 +11,7 @@
 
     >![](public_sys-resources/icon-note.gif) **说明：**   
     >-   当用户通过API添加监控数据后，云监控界面才会显示自定义监控数据。  
-    >-   添加监控数据请参见[添加监控数据（RESTful API）](http://support.huaweicloud.com/api-ces/zh-cn_topic_0032831274.html)、[添加监控数据（Java SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072124679.html)、[添加监控数据（Python SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072126389.html)。  
+    >-   添加监控数据请参见[添加监控数据（RESTful API）](https://support.huaweicloud.com/api-ces/zh-cn_topic_0032831274.html)、[添加监控数据（Java SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072124679.html)、[添加监控数据（Python SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072126389.html)。  
 
 5.  选择待查看的云服务资源所在行的“查看监控指标”，进入“监控指标”页面。
 
