--- a/cn.zh-cn/用户指南/云硬盘的监控指标.md
+++ b/cn.zh-cn/用户指南/云硬盘的监控指标.md
@@ -13,17 +13,7 @@
 </th>
 </tr>
 </thead>
-<tbody><tr id="zh-cn_topic_0095137102_row130211454448"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p430284514414"><a name="zh-cn_topic_0095137102_p430284514414"></a><a name="zh-cn_topic_0095137102_p430284514414"></a>磁盘读速率</p>
-</td>
-<td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p3515183844613"><a name="zh-cn_topic_0095137102_p3515183844613"></a><a name="zh-cn_topic_0095137102_p3515183844613"></a>该指标用于统计每秒从测量对象读出数据量。</p>
-<p id="zh-cn_topic_0095137102_p3303745174410"><a name="zh-cn_topic_0095137102_p3303745174410"></a><a name="zh-cn_topic_0095137102_p3303745174410"></a>单位：Byte/s。</p>
-</td>
-<td class="cellrowborder" valign="top" width="13.489999999999998%" headers="mcps1.2.5.1.3 "><p id="zh-cn_topic_0095137102_p133031245114411"><a name="zh-cn_topic_0095137102_p133031245114411"></a><a name="zh-cn_topic_0095137102_p133031245114411"></a>云硬盘</p>
-</td>
-<td class="cellrowborder" valign="top" width="32.99%" headers="mcps1.2.5.1.4 "><div class="p" id="zh-cn_topic_0095137102_p1560465462516"><a name="zh-cn_topic_0095137102_p1560465462516"></a><a name="zh-cn_topic_0095137102_p1560465462516"></a>监控周期根据云硬盘所挂载<span id="zh-cn_topic_0095137102_text9384132716509"><a name="zh-cn_topic_0095137102_text9384132716509"></a><a name="zh-cn_topic_0095137102_text9384132716509"></a>云服务器</span>的虚拟化类型不同有差异：<a name="zh-cn_topic_0095137102_ul760455415251"></a><a name="zh-cn_topic_0095137102_ul760455415251"></a><ul id="zh-cn_topic_0095137102_ul760455415251"><li>KVM：5分钟</li><li>XEN：4分钟</li></ul>
-</div>
-</td>
-</tr>
+<tbody>
 <tr id="zh-cn_topic_0095137102_row58713584313"><td class="cellrowborder" valign="top" width="16.32%" headers="mcps1.2.5.1.1 "><p id="zh-cn_topic_0095137102_p639293919437"><a name="zh-cn_topic_0095137102_p639293919437"></a><a name="zh-cn_topic_0095137102_p639293919437"></a>磁盘读带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="37.2%" headers="mcps1.2.5.1.2 "><p id="zh-cn_topic_0095137102_p63947395438"><a name="zh-cn_topic_0095137102_p63947395438"></a><a name="zh-cn_topic_0095137102_p63947395438"></a>该指标用于统计每秒从测量对象读出数据量。</p>
